@@ -141,3 +141,8 @@ MOSQ_1.7 {
 		mosquitto_property_next;
 		mosquitto_ssl_get;
 } MOSQ_1.6;
+
+MOSQ_2.1 {
+	global:
+		mosquitto_delay_puback;
+} MOSQ_1.7;
